Corrected align spelling

--- a/resources/css/style.css/style1.css
+++ b/resources/css/style.css/style1.css
@@ -1,6 +1,6 @@
 body {
     background-color: #000000;
-    text-allign: center;
+    text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
